# django

./: .gitignore  README.md  SUMMARY.md  book.json  pyproject.toml
.github/workflows/: github_doc.yml
django-polls/: LICENSE.rst  pyproject.toml
django-polls/django_polls/: admin.py  apps.py  models.py  views.py
django-polls/django_polls/templates/polls/: detail.html
mysite/: db.sqlite3
mysite/mysite/: settings.py  urls.py
mysite/polls/: admin.py  models.py  tests.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/templates/polls/: index.html
official/: index.md
