[tool.poetry]
name = "mydjango"
version = "0.1.0"
description = ""
authors = ["huo <huo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
django = "^5.1"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
build = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
